# src/src/routes/userRoute.ts
@@ -1,37 +1,38 @@
 import express from "express";
 const router = express.Router();
 
-import { isAdmin, verifyToken } from "../middlewares/jwtMiddlewares";
 import upload from "../middlewares/mulderMiddlewares";
 import UserController from "../controllers/userController";
-
+import { JwtMiddlewares } from "../middlewares/jwtMiddlewares";
+const jwtMiddlewares = new JwtMiddlewares();
 router.route("/register").post(UserController.registerAUser);
-
 router.route("/login").post(UserController.loginAUser);
 
 router
   .route("/")
-  .all(verifyToken)
+  .all(jwtMiddlewares.isConnect)
   .post(UserController.deleteAUser)
   .put(UserController.patchAUser)
   .get(UserController.getAUser);
 
 router
   .route("/updatePassword")
-  .patch(verifyToken, UserController.patchAUserPassword);
-router.route("/updateEmail").patch(verifyToken, UserController.patchAUserEmail);
+  .patch(jwtMiddlewares.isConnect, UserController.patchAUserPassword);
+router
+  .route("/updateEmail")
+  .patch(jwtMiddlewares.isConnect, UserController.patchAUserEmail);
 router
   .route("/updateProfil")
-  .patch(verifyToken, UserController.patchAUserProfil);
+  .patch(jwtMiddlewares.isConnect, UserController.patchAUserProfil);
 
 router
   .route("/profile-picture")
   .patch(
-    verifyToken,
+    jwtMiddlewares.isConnect,
     upload.single("profilePicture"),
     UserController.putAProfilePictureUser
   );
 
-router.route("/all").get(isAdmin, UserController.getAllUser);
+router.route("/all").get(jwtMiddlewares.isAdmin, UserController.getAllUser);
 
 export default router;
